# maioreb

./: .gitignore  README.md  db.sqlite3  div.py  manage.py  purgecss.config.cjs  pyproject.toml  readme.md  requirements.txt
.gemini/: agents copy.md  agents.md  karrio.md  rental.md
about/: models.py
about/migrations/: 0001_initial.py  0002_alter_whatwedopage_vision_content_and_more.py  0002_rsepage_date_document_rsepage_document_rse.py  0003_alter_aboutpage_options_remove_aboutpage_key_numbers_and_more.py  0004_aboutpage_client_logo_alter_aboutpage_images.py  0005_aboutpage_mission_image_and_more.py  0006_aboutpage_history.py  0007_remove_aboutpage_vision_content_and_more.py  0008_alter_aboutpage_mission_content_and_more.py
about/templatetags/: split_filters.py
blog/: models.py
blog/migrations/: 0001_initial.py
blog/templates/: blog_sidebar.html
config/: blocks.py  middleware.py  urls.py  utils.py  wsgi.py
config/settings/: base.py  dev.py  production.py
contact/: apps.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_contactpage_recipients_emails.py  0002_rename_fqaclient_fqaservicesprovided_and_more.py  0003_alter_fqaservicesprovided_faq.py  0003_fqaclient.py  0004_alter_fqaclient_options.py  0004_remove_contactpage_address_contactpage_location.py  0005_alter_contactpage_location.py  0005_remove_fqaclient_faq_fqaclient_faq_client.py  0006_alter_contactpage_location.py  0006_remove_fqaclient_faq_client_fqaclient_faq.py  0007_alter_contactpage_location.py  0008_alter_contactpage_recipients_emails.py
core/: sitemaps.py  views.py
expertise/: models.py
expertise/migrations/: 0001_initial.py  (+2 more)
home/: models.py
legal/: models.py
portfolio/: models.py
recruitment/: models.py  urls.py  views.py
static/: robots.txt
templates/: 404.html  500.html  base.html  maintenance.html  new_base.html
(+56 files in other folders)
