[project]
name = "maioreb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyascii==0.3.3",
    "asgiref==3.11.0",
    "beautifulsoup4==4.14.3",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "defusedxml==0.7.1",
    "django==5.2.9",
    "django-cogwheels==0.3",
    "django-compressor>=4.6.0",
    "django-debug-toolbar>=6.1.0",
    "django-environ>=0.12.0",
    "django-filter==25.2",
    "django-htmx>=1.27.0",
    "django-http-compression>=1.2.0",
    "django-modelcluster==6.4",
    "django-permissionedforms==0.1",
    "django-stubs-ext==5.2.8",
    "django-taggit==6.1.0",
    "django-tasks==0.7.0",
    "django-treebeard==4.8.0",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework==3.16.1",
    "draftjs-exporter==5.1.0",
    "et-xmlfile==2.0.0",
    "filetype==1.2.0",
    "gunicorn>=23.0.0",
    "idna==3.11",
    "laces==0.1.2",
    "modelsearch==1.1.1",
    "openpyxl==3.1.5",
    "pillow==11.3.0",
    "python-dotenv>=1.2.1",
    "python-environ>=0.4.54",
    "redis>=7.1.0",
    "requests==2.32.5",
    "soupsieve==2.8",
    "sqlparse==0.5.4",
    "telepath==0.3.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wagtail==7.0",
    "wagtail-django-recaptcha>=2.1.1",
    "wagtail-localize>=1.13.1",
    "wagtailmenus==4.0.5",
    "whitenoise>=6.11.0",
    "willow==1.12.0",
]


[tool.basedpyright]
useLibraryCodeForTypes = true
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportOptionalCall = false
reportAttributeAccessIssue = false
reportOperatorIssue = false
reportCallIssue = false
reportArgumentType = false
reportAssignmentType = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false

